# snakepipes

./: .gitignore  .gitignore~  .readthedocs.yaml  .snakemake-workflow-catalog.yml  .travis.yml  ChIP-seq  ChangeLog  DNA-mapping  HiC  LICENSE  MANIFEST.in  README.md  README.rst  RNA-seq  azure-pipelines.yml  install.sh  pyproject.toml  requirements.txt  runRNAseq.sh  scRNAseq-mapcount  setup.py
.azure-pipelines/: macosx_setup.yml  setup.yml  testCreateEnv.py
.ci_stuff/: ChIP.sample_broad_config.yaml  ChIP.sample_config.yaml  ChIP.sample_noControl_config.yaml  genome.fa  genome.fa.fai  organism.yaml  setup_conda.sh  spikein_organism.yaml  test_dag.sh  test_docs.sh  test_ignore_patterns.txt  test_sampleSheet.tsv  test_sampleSheet_multiComp.tsv
.ci_stuff/output/: DNA-mapping.config.yaml
.github/: condaBuildCI.yml  conda_ci.yml  condarc.yml  snakePipesEnvCI.yml
.github/workflows/: build.yml  conda-build.yml  linux.yml  osx.yml  pytest.yml  windhoos.yml
BAM_input/: ChIP-seq.cluster_config.yaml  ChIP-seq.config.yaml  chip_samples.yaml
conda-recipe/: build.sh  meta.yaml
docs/: ChangeLog.rst  Makefile  conf.py  environment.yaml  index.rst  requirements.txt
docs/content/: News.rst  advance_usage.rst  advanced_usage.rst  create_index.rst  preprocessing_sampleSheet.example.tsv  running_snakePipes.rst  setting_up.rst
output/: DNA-mapping.cluster_config.yaml  DNA-mapping.config.yaml
sandbox/: 170314_J00182_0022_AHJ23NBBXX_lanes1_2_3_4_5_6_7  Annotation  FASTQ  FASTQ_Cutadapt  FastQC  FastQC_trimmed  RNAseq_fastq  STAR  cluster_logs  config.yaml  featureCounts  sample_kdvswt.tsv
sandbox/DESeq2/: DESeq2.de_all.tsv  DESeq2.de_down.tsv  DESeq2.de_up.tsv  DESeq2.session_info.txt  DESeq2.stats.tsv  counts.tsv
shared/: .paths.py.swp  cluster.json  cluster.yaml  cluster.yaml~  common_functions.py  debugging.snakefile  deeptools_cmds.py  deeptools_cmds.snakefile  load_organism_data.py  load_organisms.snakefile  paths.py  paths.yaml  paths.yaml~
shared/organisms/: GRCz10.yaml  GRCz10.yaml~  SchizoSPombe_ASM294v2.yaml  dm3.py  dm3.t2g  dm3.yaml  dm6.py  dm6.symbol  dm6.t2g  dm6.yaml  hs37d5.py  hs37d5.yaml  m13.py  mm10.py  mm10.yaml  mm10_gencodeM13.yaml  mm9.py  mm9.symbol  mm9.yaml
shared/rules/: ATAC.snakefile  ATAC_qc.snakefile  Bowtie2.snakefile  Bowtie2_allelic.snakefile  Bowtie2_and_MarkDuplicates.snakefile  Bowtie2_bam_filtering.snakefile  CSAW.snakefile  ChIP_qc_report.snakefile  ChiP-seq_qc_report.snakefile  DESeq2.snakefile  FASTQ.snakefile  FASTQ_downsample.snakefile  FASTQ_symlink.snakefile  FastQC.snakefile  GenomicContamination.snakefile  HISAT2.snakefile  MACS2.snakefile  Picard.snakefile  Picard_qc.snakefile  Qualimap_bamqc.snakefile  RNA-seq_qc_report.snakefile  RNA_mapping.snakefile  RNA_mapping_allelic.snakefile  SNPsplit.snakefile  Salmon.snakefile  TrimGalore.snakefile  WGBS.snakefile  WGBS.snakefile_full  WGBS.snakefile_truncated  WGBS.snakefile~  bam_filtering.snakefile  computeGCBias.snakefile  create_annotation.snakefile  deepTools.snakefile  deepTools_ATAC.snakefile  deepTools_ChIP.snakefile  deepTools_ChIP_allelic.snakefile  deepTools_RNA.snakefile  deepTools_RNA_allelic.snakefile  deepTools_fingerprint.snakefile  (+16 more)
shared/tools/: ATAC-FragmentHandler.py  CSAW.R  CollectInsertSizeMetrics_histogram.R  DB_functions.R  DESeq2.R  DE_functions.R  WGBS_QC_report_template.Rmd~  WGBSpipe.POM.filt.R  WGBSpipe.POM.filt.R~  WGBSpipe.interval_stats.limma.R  WGBSpipe.interval_stats.limma.R~  WGBSpipe.metilene_stats.limma.R  WGBSpipe.metilene_stats.limma.R~  WGBSpipe.singleCpGstats.limma.R  WGBSpipe.singleCpGstats.limma.R~  conversionRate_KS.sh  downsample_se_pe.sh  extractTx2GeneMapping.sh  fapos.py  fastq_head.sh  gtf2bed.py  install_R_packages.R  install_R_packages.sh  install_R_packages.txt  library_type.R  library_type.py  library_type.tsv  merge_count_tables.R  merge_featureCounts.R  parseBAM2BEDPE.py  sample_qc_report_PE.py  sample_qc_report_SE.py  sleuth.R
snakePipes/: __init__.py  common_functions.py  parserCommon.py  snakePipes.py
snakePipes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snakePipes/shared/: cluster.yaml  defaults.yaml  sampleInfo.example.tsv
tests/: test_jobcounts.py  test_mRNA.py
tests/data/: cluster_config.yaml
workflows/ATAC-seq/: ATAC-seq  Snakefile  defaults.yaml  example.atac_samples.yaml  internals.snakefile
workflows/AlleleSpecific_mapping/: AlleleSpecific_RNA-seq  Snakefile  defaults.yaml  internals.snakefile
workflows/ChIP-seq/: ChIP-seq  Snakefile  defaults.yaml  example.config.yaml  internals.snakefile
workflows/DNA-mapping/: DNA-mapping  Snakefile  cluster.yaml  defaults.yaml  defaults.yaml~  environment.yaml  example.config.yaml  internals.snakefile  rules.snakefile
workflows/HiC/: HiC  Snakefile  defaults.yaml  environment.yaml  internals.snakefile
workflows/RNA-seq/: RNA-seq  Snakefile  cluster.yaml  defaults.yaml  internals.snakefile
workflows/WGBS/: Snakefile  Snakefile_full  Snakefile_truncated  Snakefile~  (+12 more)
(+370 files in other folders)
