[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "snakePipes"
description = 'Snakemake workflows and wrappers for NGS data processing from the MPI-IE'
readme = "README.rst"
version = "3.9.1"
keywords = [
    "DNA-mapping",
    "ChIP-Seq",
    "mRNA-seq",
    "noncoding-RNA-seq",
    "ATAC-seq",
    "scRNA-seq",
    "WGBS / Bisulfite seq",
    "epigenetics workflows",
    "Illumina"
]
authors = [
  {name = "Bioinfo-Core MPI-IE"}
]
requires-python = ">=3.9"
dependencies = [
    "snakemake >= 6.2.1, <7.19.0",
    "psutil",
    "pandas",
    "thefuzz",
    "pyyaml >= 5.1",
    "tabulate < 0.9"
]
classifiers = [
    "Intended Audience :: Bioinformaticians",
    "Intended Audience :: Biologists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",   
]

[project.scripts]
makePairs = "snakePipes.workflows.makePairs.makePairs:main"
