[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "snakePipes"
description = 'Snakemake workflows and wrappers for NGS data processing from the MPI-IE'
readme = "README.rst"
version = "3.9.1"
keywords = [
    "DNAmapping",
    "ChIPSeq",
    "mRNAseq",
    "ncRNAseq",
    "ATACseq",
    "scRNAseq",
    "WGBS / Bisulfite seq",
    "epigenetics workflows",
    "Illumina"
]
authors = [
  {name = "Bioinfo-Core MPI-IE"}
]
requires-python = ">=3.10"
dependencies = [
    "snakemake >= 6.2.1, <7.19.0",
    "psutil",
    "pandas",
    "thefuzz",
    "pyyaml >= 5.1",
    "tabulate < 0.9",
    "pulp == 2.7.0"
]
classifiers = [
    "Intended Audience :: Bioinformaticians",
    "Intended Audience :: Biologists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",   
]

[project.optional-dependencies]
actions = [
    "pytest",
    "flake8",
    "ruamel.yaml",
    "graphviz"
]

[project.scripts]
ATACseq = "snakePipes.workflows.ATACseq.ATACseq:main"
ChIPseq = "snakePipes.workflows.ChIPseq.ChIPseq:main"
createIndices = "snakePipes.workflows.createIndices.createIndices:main"
DNAmapping = "snakePipes.workflows.DNAmapping.DNAmapping:main"
HiC = "snakePipes.workflows.HiC.HiC:main"
makePairs = "snakePipes.workflows.makePairs.makePairs:main"
mRNAseq = "snakePipes.workflows.mRNAseq.mRNAseq:main"
ncRNAseq = "snakePipes.workflows.ncRNAseq.ncRNAseq:main"
preprocessing = "snakePipes.workflows.preprocessing.preprocessing:main"
scRNAseq = "snakePipes.workflows.scRNAseq.scRNAseq:main"
WGBS = "snakePipes.workflows.WGBS.WGBS:main"
snakePipes = "snakePipes.snakePipes:main"